# korenani-kamuy

./: LICENSE  README.md
Documentation/idea/: idea-kamuy.utf8.txt
opendata.fml.org/cgi-bin/korenani/: query.cgi
opendata.fml.org/html/: index.html
opendata.fml.org/html/korenani/: index.html  trail-life.css
trail-life/: .cvsignore  Makefile.in  README.md  configure  configure.in  install.sh.in
trail-life/edrg/: cooked.edict2.imagenet
trail-life/nsrg/: LICENSE  setup.sh.in
trail-life/nsrg/lib/perl/Trail/: Life.pm
